# AI-python

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: config.py  langsmith_config.py  logging_config.py
app/db/: chat_repository.py  database.py
app/llm_prompts/: prompt_template.py  resume_system_instructions.py  summary_kai.txt
app/routers/: internet_search.py  resume_chat.py
app/schemas/: internet_search.py  resume_chat.py
app/services/: resume_llm_service.py
app/tools/: __init__.py  internet_search_tool.py
app/utils/: general_utils.py
docs/: AI-python.postman_collection.json
