[project]
name = "ai-python"
version = "0.1.0"
description = "AI Python Demo project"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.3",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langsmith>=0.6.2",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf2>=3.0.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
]
